--- a/javadispatcher/javadispatcher.vcproj
+++ b/javadispatcher/javadispatcher.vcproj
@@ -1,148 +1,204 @@
-<?xml version="1.0" encoding = "Windows-1252"?>
+<?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="7.00"
+	Version="8.00"
 	Name="javadispatcher"
 	ProjectGUID="{9E84A1A9-DED1-4AD8-A654-A60249DFEEAE}"
-	SccProjectName=""
-	SccLocalPath=""
-	Keyword="MakeFileProj">
+	Keyword="MakeFileProj"
+	>
 	<Platforms>
 		<Platform
-			Name="Win32"/>
+			Name="Win32"
+		/>
 	</Platforms>
+	<ToolFiles>
+	</ToolFiles>
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
 			OutputDirectory=".\Debug"
 			IntermediateDirectory=".\Debug"
 			ConfigurationType="0"
+			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC70.vsprops"
 			UseOfMFC="0"
-			ATLMinimizesCRunTimeLibraryUsage="FALSE">
+			ATLMinimizesCRunTimeLibraryUsage="false"
+			>
 			<Tool
 				Name="VCNMakeTool"
 				BuildCommandLine="nmake /f &quot;javadispatcher.mak&quot;"
 				ReBuildCommandLine="nmake /f &quot;javadispatcher.mak&quot; /a"
-				Output="..\java\classes\MDSplus.jar"/>
+				CleanCommandLine=""
+				Output="..\java\classes\MDSplus.jar"
+				PreprocessorDefinitions=""
+				IncludeSearchPath=""
+				ForcedIncludes=""
+				AssemblySearchPath=""
+				ForcedUsingAssemblies=""
+				CompileAsManaged=""
+			/>
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
 			OutputDirectory=".\Release"
 			IntermediateDirectory=".\Release"
 			ConfigurationType="0"
+			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC70.vsprops"
 			UseOfMFC="0"
-			ATLMinimizesCRunTimeLibraryUsage="FALSE">
+			ATLMinimizesCRunTimeLibraryUsage="false"
+			>
 			<Tool
 				Name="VCNMakeTool"
 				BuildCommandLine="nmake /f &quot;javadispatcher.mak&quot;"
 				ReBuildCommandLine="nmake /f &quot;javadispatcher.mak&quot; /a"
 				CleanCommandLine="rm *.class"
-				Output="..\java\classes\MDSplus.jar"/>
+				Output="..\java\classes\jDispatcher.jar"
+				PreprocessorDefinitions=""
+				IncludeSearchPath=""
+				ForcedIncludes=""
+				AssemblySearchPath=""
+				ForcedUsingAssemblies=""
+				CompileAsManaged=""
+			/>
 		</Configuration>
 	</Configurations>
+	<References>
+	</References>
 	<Files>
 		<Filter
 			Name="Source Files"
-			Filter="cpp;c;cxx;rc;def;r;odl;idl;hpj;bat">
+			Filter="cpp;c;cxx;rc;def;r;odl;idl;hpj;bat"
+			>
 			<File
-				RelativePath=".\Action.java">
+				RelativePath=".\Action.java"
+				>
 			</File>
 			<File
-				RelativePath="ActionData.java">
+				RelativePath="ActionData.java"
+				>
 			</File>
 			<File
-				RelativePath=".\ActionServer.java">
+				RelativePath=".\ActionServer.java"
+				>
 			</File>
 			<File
-				RelativePath=".\Balancer.java">
+				RelativePath=".\Balancer.java"
+				>
 			</File>
 			<File
-				RelativePath="CompoundData.java">
+				RelativePath="CompoundData.java"
+				>
 			</File>
 			<File
-				RelativePath="Data.java">
+				RelativePath="Data.java"
+				>
 			</File>
 			<File
-				RelativePath="DataListener.java">
+				RelativePath="Database.java"
+				>
 			</File>
 			<File
-				RelativePath="Database.java">
+				RelativePath="DataListener.java"
+				>
 			</File>
 			<File
-				RelativePath=".\Descriptor.java">
+				RelativePath=".\Descriptor.java"
+				>
 			</File>
 			<File
-				RelativePath="IllegalDataException.java">
+				RelativePath="IllegalDataException.java"
+				>
 			</File>
 			<File
-				RelativePath=".\InfoServer.java">
+				RelativePath=".\InfoServer.java"
+				>
 			</File>
 			<File
-				RelativePath=".\MdsHelper.java">
+				RelativePath=".\jDispatcher.java"
+				>
 			</File>
 			<File
-				RelativePath=".\MdsIp.java">
+				RelativePath=".\jDispatcherIp.java"
+				>
 			</File>
 			<File
-				RelativePath=".\MdsMonitor.java">
+				RelativePath=".\jDispatchMonitor.java"
+				>
 			</File>
 			<File
-				RelativePath=".\MdsMonitorEvent.java">
+				RelativePath=".\MdsHelper.java"
+				>
 			</File>
 			<File
-				RelativePath=".\MdsServer.java">
+				RelativePath=".\MdsIp.java"
+				>
 			</File>
 			<File
-				RelativePath=".\MdsServerEvent.java">
+				RelativePath=".\MdsMonitor.java"
+				>
 			</File>
 			<File
-				RelativePath=".\MdsServerListener.java">
+				RelativePath=".\MdsMonitorEvent.java"
+				>
 			</File>
 			<File
-				RelativePath=".\MonitorEvent.java">
+				RelativePath=".\MdsServer.java"
+				>
 			</File>
 			<File
-				RelativePath=".\MonitorListener.java">
+				RelativePath=".\MdsServerEvent.java"
+				>
 			</File>
 			<File
-				RelativePath=".\NetworkEvent.java">
+				RelativePath=".\MdsServerListener.java"
+				>
 			</File>
 			<File
-				RelativePath=".\NetworkListener.java">
+				RelativePath=".\MonitorEvent.java"
+				>
 			</File>
 			<File
-				RelativePath=".\Server.java">
+				RelativePath=".\MonitorListener.java"
+				>
 			</File>
 			<File
-				RelativePath=".\ServerEvent.java">
+				RelativePath=".\NetworkEvent.java"
+				>
 			</File>
 			<File
-				RelativePath=".\ServerListener.java">
+				RelativePath=".\NetworkListener.java"
+				>
 			</File>
 			<File
-				RelativePath=".\jDispatchMonitor.java">
+				RelativePath=".\Server.java"
+				>
 			</File>
 			<File
-				RelativePath=".\jDispatcher.java">
+				RelativePath=".\ServerEvent.java"
+				>
 			</File>
 			<File
-				RelativePath=".\jDispatcherIp.java">
+				RelativePath=".\ServerListener.java"
+				>
 			</File>
 		</Filter>
 		<Filter
 			Name="Makefile"
-			Filter="mak">
+			Filter="mak"
+			>
 			<File
-				RelativePath=".\javadispatcher.mak">
+				RelativePath=".\javadispatcher.mak"
+				>
 			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
-			Filter="h;hpp;hxx;hm;inl">
+			Filter="h;hpp;hxx;hm;inl"
+			>
 		</Filter>
 		<Filter
 			Name="Resource Files"
-			Filter="ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe">
+			Filter="ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe"
+			>
 		</Filter>
 	</Files>
 	<Globals>
