--- a/javascope/WaveDisplay.vcproj
+++ b/javascope/WaveDisplay.vcproj
@@ -1,69 +1,100 @@
-<?xml version="1.0" encoding = "Windows-1252"?>
+<?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="7.00"
+	Version="8.00"
 	Name="WaveDisplay"
 	ProjectGUID="{18515822-B059-46F4-BA47-2A2DE97F07EE}"
-	SccProjectName=""
-	SccLocalPath=""
-	Keyword="MakeFileProj">
+	Keyword="MakeFileProj"
+	>
 	<Platforms>
 		<Platform
-			Name="Win32"/>
+			Name="Win32"
+		/>
 	</Platforms>
+	<ToolFiles>
+	</ToolFiles>
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
 			OutputDirectory=".\WaveDisplay___Win32_Debug"
 			IntermediateDirectory=".\WaveDisplay___Win32_Debug"
 			ConfigurationType="0"
+			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC70.vsprops"
 			UseOfMFC="0"
-			ATLMinimizesCRunTimeLibraryUsage="FALSE">
+			ATLMinimizesCRunTimeLibraryUsage="false"
+			>
 			<Tool
 				Name="VCNMakeTool"
 				BuildCommandLine="nmake /f &quot;WaveDisplay.mak&quot;"
 				ReBuildCommandLine="nmake /f &quot;WaveDisplay.mak&quot; /a"
-				Output="..\java\classes\WaveDisplay.jar"/>
+				CleanCommandLine=""
+				Output="..\java\classes\WaveDisplay.jar"
+				PreprocessorDefinitions=""
+				IncludeSearchPath=""
+				ForcedIncludes=""
+				AssemblySearchPath=""
+				ForcedUsingAssemblies=""
+				CompileAsManaged=""
+			/>
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
 			OutputDirectory=".\Release"
 			IntermediateDirectory=".\Release"
 			ConfigurationType="0"
+			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC70.vsprops"
 			UseOfMFC="0"
-			ATLMinimizesCRunTimeLibraryUsage="FALSE">
+			ATLMinimizesCRunTimeLibraryUsage="false"
+			>
 			<Tool
 				Name="VCNMakeTool"
 				BuildCommandLine="NMAKE /f WaveDisplay.mak"
 				ReBuildCommandLine="NMAKE /f WaveDisplay.mak /a"
-				Output="..\java\classes\WaveDisplay.jar"/>
+				CleanCommandLine=""
+				Output="..\java\classes\WaveDisplay.jar"
+				PreprocessorDefinitions=""
+				IncludeSearchPath=""
+				ForcedIncludes=""
+				AssemblySearchPath=""
+				ForcedUsingAssemblies=""
+				CompileAsManaged=""
+			/>
 		</Configuration>
 	</Configurations>
+	<References>
+	</References>
 	<Files>
 		<Filter
 			Name="Source Files"
-			Filter="cpp;c;cxx;rc;def;r;odl;idl;hpj;bat">
+			Filter="cpp;c;cxx;rc;def;r;odl;idl;hpj;bat"
+			>
 			<File
-				RelativePath=".\WaveDisplay.java">
+				RelativePath=".\WaveDisplay.java"
+				>
 			</File>
 		</Filter>
 		<Filter
 			Name="Makefile"
-			Filter="*.mak">
+			Filter="*.mak"
+			>
 			<File
-				RelativePath=".\WaveDisplay.mak">
+				RelativePath=".\WaveDisplay.mak"
+				>
 			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
-			Filter="h;hpp;hxx;hm;inl">
+			Filter="h;hpp;hxx;hm;inl"
+			>
 		</Filter>
 		<Filter
 			Name="Resource Files"
-			Filter="ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe">
+			Filter="ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe"
+			>
 		</Filter>
 		<File
-			RelativePath="WaveDisplay.bsc">
+			RelativePath="WaveDisplay.bsc"
+			>
 		</File>
 	</Files>
 	<Globals>
