--- a/mdslib/mdslib_client.vcproj
+++ b/mdslib/mdslib_client.vcproj
@@ -1,184 +1,277 @@
-<?xml version="1.0" encoding = "Windows-1252"?>
+<?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="7.00"
+	Version="8.00"
 	Name="mdslib_client"
 	ProjectGUID="{CA150538-191A-4ACA-BB03-10D19447E4EA}"
-	SccProjectName=""
-	SccLocalPath="">
+	>
 	<Platforms>
 		<Platform
-			Name="Win32"/>
+			Name="Win32"
+		/>
 	</Platforms>
+	<ToolFiles>
+	</ToolFiles>
 	<Configurations>
 		<Configuration
 			Name="Release|Win32"
 			OutputDirectory="../Release"
 			IntermediateDirectory=".\mdslib_client/Release"
 			ConfigurationType="2"
+			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC70.vsprops"
 			UseOfMFC="0"
-			ATLMinimizesCRunTimeLibraryUsage="FALSE">
+			ATLMinimizesCRunTimeLibraryUsage="false"
+			>
+			<Tool
+				Name="VCPreBuildEventTool"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"
+			/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"
+			/>
+			<Tool
+				Name="VCMIDLTool"
+				PreprocessorDefinitions="NDEBUG"
+				MkTypLibCompatible="true"
+				SuppressStartupBanner="true"
+				TargetEnvironment="1"
+				TypeLibraryName=".\mdslib_client/Release/mdslib_client.tlb"
+			/>
 			<Tool
 				Name="VCCLCompilerTool"
 				InlineFunctionExpansion="1"
 				AdditionalIncludeDirectories="../include"
 				PreprocessorDefinitions="NDEBUG;WIN32;_WINDOWS;_CLIENT_ONLY"
-				StringPooling="TRUE"
+				StringPooling="true"
 				RuntimeLibrary="2"
-				EnableFunctionLevelLinking="TRUE"
-				UsePrecompiledHeader="2"
+				EnableFunctionLevelLinking="true"
+				UsePrecompiledHeader="0"
 				PrecompiledHeaderFile=".\mdslib_client/Release/mdslib_client.pch"
 				AssemblerListingLocation=".\mdslib_client/Release/"
 				ObjectFile=".\mdslib_client/Release/"
 				ProgramDataBaseFileName=".\mdslib_client/Release/"
 				WarningLevel="3"
-				SuppressStartupBanner="TRUE"
-				CompileAs="0"/>
+				SuppressStartupBanner="true"
+				CompileAs="0"
+			/>
 			<Tool
-				Name="VCCustomBuildTool"/>
+				Name="VCManagedResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCResourceCompilerTool"
+				PreprocessorDefinitions="NDEBUG"
+				Culture="1033"
+			/>
+			<Tool
+				Name="VCPreLinkEventTool"
+			/>
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalOptions="/MACHINE:I386"
 				AdditionalDependencies="wsock32.lib odbc32.lib odbccp32.lib"
 				OutputFile="$(OutDir)/mdslib_client.dll"
 				LinkIncremental="1"
-				SuppressStartupBanner="TRUE"
+				SuppressStartupBanner="true"
 				ModuleDefinitionFile=".\MdsLib.def"
 				ProgramDatabaseFile=".\mdslib_client/Release/mdslib_client.pdb"
 				SubSystem="2"
-				ImportLibrary="$(OutDir)/mdslib_client.lib"/>
+				ImportLibrary="$(OutDir)/mdslib_client.lib"
+			/>
 			<Tool
-				Name="VCMIDLTool"
-				PreprocessorDefinitions="NDEBUG"
-				MkTypLibCompatible="TRUE"
-				SuppressStartupBanner="TRUE"
-				TargetEnvironment="1"
-				TypeLibraryName=".\mdslib_client/Release/mdslib_client.tlb"/>
+				Name="VCALinkTool"
+			/>
 			<Tool
-				Name="VCPostBuildEventTool"/>
+				Name="VCManifestTool"
+			/>
 			<Tool
-				Name="VCPreBuildEventTool"/>
+				Name="VCXDCMakeTool"
+			/>
 			<Tool
-				Name="VCPreLinkEventTool"/>
+				Name="VCBscMakeTool"
+			/>
 			<Tool
-				Name="VCResourceCompilerTool"
-				PreprocessorDefinitions="NDEBUG"
-				Culture="1033"/>
+				Name="VCFxCopTool"
+			/>
 			<Tool
-				Name="VCWebServiceProxyGeneratorTool"/>
+				Name="VCAppVerifierTool"
+			/>
 			<Tool
-				Name="VCWebDeploymentTool"/>
+				Name="VCWebDeploymentTool"
+			/>
+			<Tool
+				Name="VCPostBuildEventTool"
+			/>
 		</Configuration>
 		<Configuration
 			Name="Debug|Win32"
 			OutputDirectory="../Debug"
 			IntermediateDirectory=".\mdslib_client/Debug"
 			ConfigurationType="2"
+			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC70.vsprops"
 			UseOfMFC="0"
-			ATLMinimizesCRunTimeLibraryUsage="FALSE">
+			ATLMinimizesCRunTimeLibraryUsage="false"
+			>
+			<Tool
+				Name="VCPreBuildEventTool"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"
+			/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"
+			/>
+			<Tool
+				Name="VCMIDLTool"
+				PreprocessorDefinitions="_DEBUG"
+				MkTypLibCompatible="true"
+				SuppressStartupBanner="true"
+				TargetEnvironment="1"
+				TypeLibraryName=".\mdslib_client/Debug/mdslib_client.tlb"
+			/>
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="../include"
 				PreprocessorDefinitions="_DEBUG;WIN32;_WINDOWS;_CLIENT_ONLY"
 				RuntimeLibrary="3"
-				UsePrecompiledHeader="2"
+				UsePrecompiledHeader="0"
 				PrecompiledHeaderFile=".\mdslib_client/Debug/mdslib_client.pch"
 				AssemblerListingLocation=".\mdslib_client/Debug/"
 				ObjectFile=".\mdslib_client/Debug/"
 				ProgramDataBaseFileName=".\mdslib_client/Debug/"
 				WarningLevel="3"
-				SuppressStartupBanner="TRUE"
+				SuppressStartupBanner="true"
 				DebugInformationFormat="4"
-				CompileAs="0"/>
+				CompileAs="0"
+			/>
 			<Tool
-				Name="VCCustomBuildTool"/>
+				Name="VCManagedResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCResourceCompilerTool"
+				PreprocessorDefinitions="_DEBUG"
+				Culture="1033"
+			/>
+			<Tool
+				Name="VCPreLinkEventTool"
+			/>
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalOptions="/MACHINE:I386"
 				AdditionalDependencies="wsock32.lib odbc32.lib odbccp32.lib"
 				OutputFile="$(OutDir)/mdslib_client.dll"
 				LinkIncremental="2"
-				SuppressStartupBanner="TRUE"
+				SuppressStartupBanner="true"
 				ModuleDefinitionFile=".\MdsLib.def"
-				GenerateDebugInformation="TRUE"
+				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(IntDir)/mdslib_client.pdb"
 				SubSystem="2"
-				ImportLibrary="$(OutDir)/mdslib_client.lib"/>
+				ImportLibrary="$(OutDir)/mdslib_client.lib"
+			/>
 			<Tool
-				Name="VCMIDLTool"
-				PreprocessorDefinitions="_DEBUG"
-				MkTypLibCompatible="TRUE"
-				SuppressStartupBanner="TRUE"
-				TargetEnvironment="1"
-				TypeLibraryName=".\mdslib_client/Debug/mdslib_client.tlb"/>
+				Name="VCALinkTool"
+			/>
 			<Tool
-				Name="VCPostBuildEventTool"/>
+				Name="VCManifestTool"
+			/>
 			<Tool
-				Name="VCPreBuildEventTool"/>
+				Name="VCXDCMakeTool"
+			/>
 			<Tool
-				Name="VCPreLinkEventTool"/>
+				Name="VCBscMakeTool"
+			/>
 			<Tool
-				Name="VCResourceCompilerTool"
-				PreprocessorDefinitions="_DEBUG"
-				Culture="1033"/>
+				Name="VCFxCopTool"
+			/>
 			<Tool
-				Name="VCWebServiceProxyGeneratorTool"/>
+				Name="VCAppVerifierTool"
+			/>
 			<Tool
-				Name="VCWebDeploymentTool"/>
+				Name="VCWebDeploymentTool"
+			/>
+			<Tool
+				Name="VCPostBuildEventTool"
+			/>
 		</Configuration>
 	</Configurations>
+	<References>
+	</References>
 	<Files>
 		<File
-			RelativePath=".\MdsLib.c">
+			RelativePath="..\mdstcpip\adler32.c"
+			>
 		</File>
 		<File
-			RelativePath=".\MdsLib.def">
+			RelativePath="..\mdstcpip\compress.c"
+			>
 		</File>
 		<File
-			RelativePath="..\mdstcpip\adler32.c">
+			RelativePath="..\mdstcpip\deflate.c"
+			>
 		</File>
 		<File
-			RelativePath="..\mdstcpip\compress.c">
+			RelativePath="..\mdstcpip\infblock.c"
+			>
 		</File>
 		<File
-			RelativePath="..\mdstcpip\deflate.c">
+			RelativePath="..\mdstcpip\infcodes.c"
+			>
 		</File>
 		<File
-			RelativePath="..\mdstcpip\infblock.c">
+			RelativePath="..\mdstcpip\inffast.c"
+			>
 		</File>
 		<File
-			RelativePath="..\mdstcpip\infcodes.c">
+			RelativePath="..\mdstcpip\inflate.c"
+			>
 		</File>
 		<File
-			RelativePath="..\mdstcpip\inffast.c">
+			RelativePath="..\mdstcpip\inftrees.c"
+			>
 		</File>
 		<File
-			RelativePath="..\mdstcpip\inflate.c">
+			RelativePath="..\mdstcpip\infutil.c"
+			>
 		</File>
 		<File
-			RelativePath="..\mdstcpip\inftrees.c">
+			RelativePath="..\mdstcpip\mdsip_socket_io.c"
+			>
 		</File>
 		<File
-			RelativePath="..\mdstcpip\infutil.c">
+			RelativePath="..\mdstcpip\mdsiputil.c"
+			>
 		</File>
 		<File
-			RelativePath="..\mdstcpip\mdsip_socket_io.c">
+			RelativePath=".\MdsLib.c"
+			>
 		</File>
 		<File
-			RelativePath="..\mdstcpip\mdsiputil.c">
+			RelativePath=".\MdsLib.def"
+			>
 		</File>
 		<File
-			RelativePath="..\mdstcpip\trees.c">
+			RelativePath="..\mdstcpip\trees.c"
+			>
 		</File>
 		<File
-			RelativePath="..\mdstcpip\uncompr.c">
+			RelativePath="..\mdstcpip\uncompr.c"
+			>
 		</File>
 		<File
-			RelativePath="..\mdstcpip\vmshpwd.c">
+			RelativePath="..\mdstcpip\vmshpwd.c"
+			>
 		</File>
 		<File
-			RelativePath="..\mdstcpip\zutil.c">
+			RelativePath="..\mdstcpip\zutil.c"
+			>
 		</File>
 	</Files>
 	<Globals>
