--- a/tdishr/tdishr.vcproj
+++ b/tdishr/tdishr.vcproj
@@ -1,381 +1,540 @@
-<?xml version="1.0" encoding = "Windows-1252"?>
+<?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="7.00"
+	Version="8.00"
 	Name="tdishr"
 	ProjectGUID="{2A17EA39-3217-4F9B-A794-4B3C80B40744}"
-	SccProjectName=""
-	SccLocalPath="">
+	>
 	<Platforms>
 		<Platform
-			Name="Win32"/>
+			Name="Win32"
+		/>
 	</Platforms>
+	<ToolFiles>
+	</ToolFiles>
 	<Configurations>
 		<Configuration
 			Name="Release|Win32"
 			OutputDirectory="../Release"
 			IntermediateDirectory=".\Release"
 			ConfigurationType="2"
+			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC70.vsprops"
 			UseOfMFC="0"
-			ATLMinimizesCRunTimeLibraryUsage="FALSE">
+			ATLMinimizesCRunTimeLibraryUsage="false"
+			>
+			<Tool
+				Name="VCPreBuildEventTool"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"
+			/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"
+			/>
+			<Tool
+				Name="VCMIDLTool"
+				PreprocessorDefinitions="NDEBUG"
+				MkTypLibCompatible="true"
+				SuppressStartupBanner="true"
+				TargetEnvironment="1"
+				TypeLibraryName=".\Release/tdishr.tlb"
+			/>
 			<Tool
 				Name="VCCLCompilerTool"
 				InlineFunctionExpansion="1"
 				AdditionalIncludeDirectories="$(sql_dir)/devtools/include;../include"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS"
-				StringPooling="TRUE"
+				StringPooling="true"
 				RuntimeLibrary="2"
-				EnableFunctionLevelLinking="TRUE"
-				UsePrecompiledHeader="2"
+				EnableFunctionLevelLinking="true"
+				UsePrecompiledHeader="0"
 				PrecompiledHeaderFile=".\Release/tdishr.pch"
 				AssemblerListingLocation=".\Release/"
 				ObjectFile=".\Release/"
 				ProgramDataBaseFileName=".\Release/"
 				WarningLevel="3"
-				SuppressStartupBanner="TRUE"
-				CompileAs="0"/>
+				SuppressStartupBanner="true"
+				CompileAs="0"
+			/>
 			<Tool
-				Name="VCCustomBuildTool"/>
+				Name="VCManagedResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCResourceCompilerTool"
+				PreprocessorDefinitions="NDEBUG"
+				Culture="1033"
+			/>
+			<Tool
+				Name="VCPreLinkEventTool"
+			/>
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalOptions="/MACHINE:I386"
 				AdditionalDependencies="odbc32.lib odbccp32.lib"
 				OutputFile="$(OutDir)/tdishr.dll"
 				LinkIncremental="1"
-				SuppressStartupBanner="TRUE"
+				SuppressStartupBanner="true"
 				ModuleDefinitionFile=".\TdiShr.def"
 				SubSystem="2"
-				ImportLibrary="$(OutDir)/tdishr.lib"/>
+				ImportLibrary="$(OutDir)/tdishr.lib"
+			/>
 			<Tool
-				Name="VCMIDLTool"
-				PreprocessorDefinitions="NDEBUG"
-				MkTypLibCompatible="TRUE"
-				SuppressStartupBanner="TRUE"
-				TargetEnvironment="1"
-				TypeLibraryName=".\Release/tdishr.tlb"/>
+				Name="VCALinkTool"
+			/>
 			<Tool
-				Name="VCPostBuildEventTool"/>
+				Name="VCManifestTool"
+			/>
 			<Tool
-				Name="VCPreBuildEventTool"/>
+				Name="VCXDCMakeTool"
+			/>
 			<Tool
-				Name="VCPreLinkEventTool"/>
+				Name="VCBscMakeTool"
+			/>
 			<Tool
-				Name="VCResourceCompilerTool"
-				PreprocessorDefinitions="NDEBUG"
-				Culture="1033"/>
+				Name="VCFxCopTool"
+			/>
 			<Tool
-				Name="VCWebServiceProxyGeneratorTool"/>
+				Name="VCAppVerifierTool"
+			/>
 			<Tool
-				Name="VCWebDeploymentTool"/>
+				Name="VCWebDeploymentTool"
+			/>
+			<Tool
+				Name="VCPostBuildEventTool"
+			/>
 		</Configuration>
 		<Configuration
 			Name="Debug|Win32"
 			OutputDirectory="../Debug"
 			IntermediateDirectory=".\Debug"
 			ConfigurationType="2"
+			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC70.vsprops"
 			UseOfMFC="0"
-			ATLMinimizesCRunTimeLibraryUsage="FALSE">
+			ATLMinimizesCRunTimeLibraryUsage="false"
+			>
+			<Tool
+				Name="VCPreBuildEventTool"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"
+			/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"
+			/>
+			<Tool
+				Name="VCMIDLTool"
+				PreprocessorDefinitions="_DEBUG"
+				MkTypLibCompatible="true"
+				SuppressStartupBanner="true"
+				TargetEnvironment="1"
+				TypeLibraryName=".\Debug/tdishr.tlb"
+			/>
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="$(sql_dir)/devtools/include;../include"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS"
 				RuntimeLibrary="3"
-				UsePrecompiledHeader="2"
+				UsePrecompiledHeader="0"
 				PrecompiledHeaderFile=".\Debug/tdishr.pch"
 				AssemblerListingLocation=".\Debug/"
 				ObjectFile=".\Debug/"
 				ProgramDataBaseFileName=".\Debug/"
 				WarningLevel="3"
-				SuppressStartupBanner="TRUE"
+				SuppressStartupBanner="true"
 				DebugInformationFormat="4"
-				CompileAs="0"/>
+				CompileAs="0"
+			/>
 			<Tool
-				Name="VCCustomBuildTool"/>
+				Name="VCManagedResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCResourceCompilerTool"
+				PreprocessorDefinitions="_DEBUG"
+				Culture="1033"
+			/>
+			<Tool
+				Name="VCPreLinkEventTool"
+			/>
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalOptions="/MACHINE:I386"
 				AdditionalDependencies="odbc32.lib odbccp32.lib"
 				OutputFile="$(OutDir)/tdishr.dll"
 				LinkIncremental="2"
-				SuppressStartupBanner="TRUE"
+				SuppressStartupBanner="true"
 				ModuleDefinitionFile=".\TdiShr.def"
-				GenerateDebugInformation="TRUE"
+				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(IntDir)/tdishr.pdb"
 				SubSystem="2"
-				ImportLibrary="$(OutDir)/tdishr.lib"/>
+				ImportLibrary="$(OutDir)/tdishr.lib"
+			/>
 			<Tool
-				Name="VCMIDLTool"
-				PreprocessorDefinitions="_DEBUG"
-				MkTypLibCompatible="TRUE"
-				SuppressStartupBanner="TRUE"
-				TargetEnvironment="1"
-				TypeLibraryName=".\Debug/tdishr.tlb"/>
+				Name="VCALinkTool"
+			/>
 			<Tool
-				Name="VCPostBuildEventTool"/>
+				Name="VCManifestTool"
+			/>
 			<Tool
-				Name="VCPreBuildEventTool"/>
+				Name="VCXDCMakeTool"
+			/>
 			<Tool
-				Name="VCPreLinkEventTool"/>
+				Name="VCBscMakeTool"
+			/>
 			<Tool
-				Name="VCResourceCompilerTool"
-				PreprocessorDefinitions="_DEBUG"
-				Culture="1033"/>
+				Name="VCFxCopTool"
+			/>
 			<Tool
-				Name="VCWebServiceProxyGeneratorTool"/>
+				Name="VCAppVerifierTool"
+			/>
 			<Tool
-				Name="VCWebDeploymentTool"/>
+				Name="VCWebDeploymentTool"
+			/>
+			<Tool
+				Name="VCPostBuildEventTool"
+			/>
 		</Configuration>
 	</Configurations>
+	<References>
+	</References>
 	<Files>
 		<File
-			RelativePath=".\CvtConvertFloat.c">
+			RelativePath=".\CvtConvertFloat.c"
+			>
 		</File>
 		<File
-			RelativePath=".\DummyRoutines.c">
+			RelativePath=".\DummyRoutines.c"
+			>
 		</File>
 		<File
-			RelativePath=".\IsRoprand.c">
+			RelativePath=".\IsRoprand.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiAbs.c">
+			RelativePath="..\include\libroutines.h"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiAdd.c">
+			RelativePath=".\TdiAbs.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiAnd.c">
+			RelativePath=".\TdiAdd.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiArray.c">
+			RelativePath=".\TdiAnd.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiBinary.c">
+			RelativePath=".\TdiArray.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiBound.c">
+			RelativePath=".\TdiBinary.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiBuild.c">
+			RelativePath=".\TdiBound.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiCall.c">
+			RelativePath=".\TdiBuild.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiChar.c">
+			RelativePath=".\TdiCall.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiCompile.c">
+			RelativePath=".\TdiChar.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiCompileDependency.c">
+			RelativePath=".\TdiCompile.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiConstant.c">
+			RelativePath=".\TdiCompileDependency.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiConvert.c">
+			RelativePath=".\TdiConstant.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiCull.c">
+			RelativePath=".\TdiConvert.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiCvtArgs.c">
+			RelativePath=".\TdiCull.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiCvtDxDx.c">
+			RelativePath=".\TdiCvtArgs.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiDecompile.c">
+			RelativePath=".\TdiCvtDxDx.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiDecompileDependency.c">
+			RelativePath=".\TdiDecompile.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiDecompileR.c">
+			RelativePath=".\TdiDecompileDependency.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiDecompress.c">
+			RelativePath=".\TdiDecompileR.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiDefCat.c">
+			RelativePath=".\TdiDecompress.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiDefFunction.c">
+			RelativePath=".\TdiDefCat.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiDim.c">
+			RelativePath=".\TdiDefFunction.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiDivide.c">
+			RelativePath=".\TdiDim.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiDoTask.c">
+			RelativePath=".\TdiDivide.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiDtypeRange.c">
+			RelativePath=".\TdiDoTask.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiEq.c">
+			RelativePath=".\TdiDtypeRange.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiEvaluate.c">
+			RelativePath=".\TdiEq.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiExponent.c">
+			RelativePath=".\TdiEvaluate.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiExpt.c">
+			RelativePath=".\TdiExponent.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiExtFunction.c">
+			RelativePath=".\TdiExpt.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiFaultHandler.c">
+			RelativePath=".\TdiExtFunction.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiGetArgs.c">
+			RelativePath=".\TdiFaultHandler.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiGetData.c">
+			RelativePath=".\TdiGetArgs.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiGetDbi.c">
+			RelativePath=".\TdiGetData.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiGetNci.c">
+			RelativePath=".\TdiGetDbi.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiGetShape.c">
+			RelativePath=".\TdiGetNci.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiGetSlope.c">
+			RelativePath=".\TdiGetShape.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiHash.c">
+			RelativePath=".\TdiGetSlope.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiIand.c">
+			RelativePath=".\TdiHash.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiIntrinsic.c">
+			RelativePath=".\TdiIand.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiIo.c">
+			RelativePath=".\TdiIntrinsic.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiItoX.c">
+			RelativePath=".\TdiIo.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiLex.c">
+			RelativePath=".\TdiItoX.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiMakeFunctionTable.c">
+			RelativePath=".\TdiLex.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiMasterData.c">
+			RelativePath=".\TdiMakeFunctionTable.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiMath1.c">
+			RelativePath=".\TdiMasterData.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiMath2.c">
+			RelativePath=".\TdiMath1.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiMatrix.c">
+			RelativePath=".\TdiMath2.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiMaxVal.c">
+			RelativePath=".\TdiMatrix.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiMinMax.c">
+			RelativePath=".\TdiMaxVal.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiOpcDef.c">
+			RelativePath=".\TdiMinMax.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiPack.c">
+			RelativePath=".\TdiOpcDef.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiPower.c">
+			RelativePath=".\TdiPack.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiSame.c">
+			RelativePath=".\TdiPower.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiScalar.c">
+			RelativePath=".\TdiSame.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiSetRange.c">
+			RelativePath=".\TdiScalar.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiShowVm.c">
+			RelativePath=".\TdiSetRange.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiShr.def">
+			RelativePath=".\TdiShowVm.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiSort.c">
+			RelativePath=".\TdiShr.def"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiSql.c">
+			RelativePath=".\TdiSort.c"
+			>
+		</File>
+		<File
+			RelativePath=".\TdiSql.c"
+			>
 			<FileConfiguration
-				Name="Release|Win32">
+				Name="Release|Win32"
+				>
 				<Tool
 					Name="VCCLCompilerTool"
-					PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_DEBUG;SYBASE;_MBCS;_USRDLL;MDSSQL_EXPORTS;DBNTWIN32;$(NoInherit)"/>
+					PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_DEBUG;SYBASE;_MBCS;_USRDLL;MDSSQL_EXPORTS;DBNTWIN32;$(NoInherit)"
+				/>
 			</FileConfiguration>
 			<FileConfiguration
-				Name="Debug|Win32">
+				Name="Debug|Win32"
+				>
 				<Tool
 					Name="VCCLCompilerTool"
-					PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;SYBASE;_MBCS;_USRDLL;MDSSQL_EXPORTS;DBNTWIN32;$(NoInherit)"/>
+					PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;SYBASE;_MBCS;_USRDLL;MDSSQL_EXPORTS;DBNTWIN32;$(NoInherit)"
+				/>
 			</FileConfiguration>
 		</File>
 		<File
-			RelativePath=".\TdiSquare.c">
+			RelativePath=".\TdiSquare.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiStatement.c">
+			RelativePath=".\TdiStatement.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiSubscript.c">
+			RelativePath=".\TdiSubscript.c"
+			>
 		</File>
 		<File
-			RelativePath="TdiThreadSafe.c">
+			RelativePath="TdiThreadSafe.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiTrans.c">
+			RelativePath=".\TdiTrans.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiTrim.c">
+			RelativePath=".\TdiTrim.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiUnary.c">
+			RelativePath=".\TdiUnary.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiUndef.c">
+			RelativePath=".\TdiUndef.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiVar.c">
+			RelativePath=".\TdiVar.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiVector.c">
+			RelativePath=".\TdiVector.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiXxx.c">
+			RelativePath=".\TdiXxx.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiXxxOf.c">
+			RelativePath=".\TdiXxxOf.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiYacc.c">
+			RelativePath=".\TdiYacc.c"
+			>
 		</File>
 		<File
-			RelativePath=".\TdiYaccSubs.c">
-		</File>
-		<File
-			RelativePath="..\include\libroutines.h">
+			RelativePath=".\TdiYaccSubs.c"
+			>
 		</File>
 	</Files>
 	<Globals>
